# ChangeLog for media-gfx/pfaedit
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/pfaedit/ChangeLog,v 1.6 2003/04/25 14:42:04 utx Exp $

*pfaedit-030420 (25 Apr 2003)

  25 Apr 2003; Stanislav Brabec <utx@gentoo.org> pfaedit-030420.ebuild:
  New version.

*pfaedit-030402 (06 Apr 2003)

  06 Apr 2003; Dan Armak <danarmak@gentoo.org> pfaedit-030402.ebuild:
  New version. Many bugs have been fixed since the previous one

  18 Mar 2003; Dan Armak <danarmak@gentoo.org> :
  
  Filter -mfpmath=sse and -mfpmath=sse,387 cflags, as they cause the build
  to fail.

  07 Jan 2003; J Robert Ray <jrray@gentoo.org> : Unmasked for x86.

*pfaedit-021105 (11 Nov 2002)

  11 Nov 2002; J Robert Ray <jrray@gentoo.org> :
  New ebuild, submitted by Mike Ossmann <mike@ossmann.com>.